--- a/src/app/shop/featured/categories/categories.component.scss
+++ b/src/app/shop/featured/categories/categories.component.scss
@@ -1,3 +1,7 @@
+.row {
+  margin-right: 0;
+}
+
 .col-2 {
   text-align: center;
 }
