--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
 $blue-header: #06b1b9;
+$main-bg: #f7f8f9;
